--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -29,17 +29,17 @@
                     const searchBarValue = document.getElementById("parcel-search-bar").value;
 
                     if (payload == "0") {
-                        showNotification("Parcel Update", "Parcel is at distribution center");
+                        sendNotification("Parcel Update", "Parcel is at distribution center");
                         document.getElementById("payload-info").innerText = "Parcel is at distribution center";
                         document.getElementById("payload-info").className = "";
                         root.style.setProperty('--parcel-length-percentage', `0%`);
                     } else if (payload == "1") {
-                        showNotification("Parcel Update", "Parcel is out for delivery");
+                        sendNotification("Parcel Update", "Parcel is out for delivery");
                         document.getElementById("payload-info").innerText = "Parcel is out for delivery";
                         document.getElementById("payload-info").className = "";
                         root.style.setProperty('--parcel-length-percentage', `50%`);
                     } else if (payload == "2") {
-                        showNotification("Parcel Update", "Parcel is delivered");
+                        sendNotification("Parcel Update", "Parcel is delivered");
                         document.getElementById("payload-info").innerText = "Parcel is delivered";
                         document.getElementById("payload-info").className = "";
                         root.style.setProperty('--parcel-length-percentage', `100%`);
@@ -58,7 +58,7 @@
             if (searchBarValue) {
                 updateSubscribtion(searchBarValue);
             } else {
-                showNotification("Error", "Cannot search for '', please specify a package id");
+                sendNotification("Error", "Cannot search for '', please specify a package id");
             }
         }
     </script>
