--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
 
         <ol class="flex-row">
             <li>Tracks: </li>
-            <li class="underline hover"><a href="/" target="_self">Arduino Packages</a></li>
+            <li class="underline"><a href="/" target="_self">Arduino Packages</a></li>
         </ol>
 
         <article id="search-bar" class="flex-row">
