Fixed notification bug

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -13,6 +13,7 @@
 @section Scripts {
     <script>
         let payloadInterval;
+        let lastReceivedPayload = "";
 
         async function updateSubscribtion(topic) {
             const response = await fetch(`/Home/UpdateSubscribtion?topic=${topic}`);
@@ -28,17 +29,17 @@
                     const root = document.documentElement;
                     const searchBarValue = document.getElementById("parcel-search-bar").value;
 
-                    if (payload == "0") {
+                    if (payload == "0" && lastReceivedPayload != "0") {
                         showNonPersistentNotification("Parcel Update", "Parcel is at distribution center");
                         document.getElementById("payload-info").innerText = "Parcel is at distribution center";
                         document.getElementById("payload-info").className = "";
                         root.style.setProperty('--parcel-length-percentage', `0%`);
-                    } else if (payload == "1") {
+                    } else if (payload == "1" && lastReceivedPayload != "1") {
                         showNonPersistentNotification("Parcel Update", "Parcel is out for delivery");
                         document.getElementById("payload-info").innerText = "Parcel is out for delivery";
                         document.getElementById("payload-info").className = "";
                         root.style.setProperty('--parcel-length-percentage', `50%`);
-                    } else if (payload == "2") {
+                    } else if (payload == "2" && lastReceivedPayload != "2") {
                         showNonPersistentNotification("Parcel Update", "Parcel is delivered");
                         document.getElementById("payload-info").innerText = "Parcel is delivered";
                         document.getElementById("payload-info").className = "";
@@ -48,6 +49,8 @@
                         document.getElementById("payload-info").className = "invalid";
                         root.style.setProperty('--parcel-length-percentage', `50%`);
                     }
+
+                    lastReceivedPayload = payload;
                 });
         }
 
